fix: Fixed css on mobile version

--- a/src/App.scss
+++ b/src/App.scss
@@ -1,9 +1,17 @@
 @use "./utils";
 @import url("https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap");
 
+:root {
+  font-size: calc(16px + 0.1vw);
+}
+
 .wrapper {
   min-height: 100vh;
   height: 100%;
+  padding: 0 16px;
+  @media (min-width: utils.$tablet-screen) {
+    padding: 0;
+  }
 }
 
 .centered__container {
