--- a/src/pages/ArtistAlbumSearch/ArtistAlbumSearch.module.scss
+++ b/src/pages/ArtistAlbumSearch/ArtistAlbumSearch.module.scss
@@ -1,5 +1,8 @@
 @use "src/utils";
 .pageContainer {
   @include utils.flexTemplate(flex-start, column, 2em);
-  padding: 2em 4em 2em 4em;
+  padding: 1em 16px 1em 16px;
+  @media (min-width: utils.$tablet-screen) {
+    padding: 2em 4em 2em 4em;
+  }
 }
